modules/eks/modules/eks/workers.tf
resource "aws_autoscaling_group" "workers" {
  name_prefix          = aws_eks_cluster.this.name}-${lookup(var.worker_groups[count.index], "name", count.index)
  desired_capacity     = lookup(var.worker_groups[count.index], "asg_desired_capacity", lookup(var.workers_group_defaults, "asg_desired_capacity"))
  max_size             = lookup(var.worker_groups[count.index], "asg_max_size",lookup(var.workers_group_defaults, "asg_max_size"))
  min_size             = lookup(var.worker_groups[count.index], "asg_min_size",lookup(var.workers_group_defaults, "asg_min_size"))
  launch_configuration = element(aws_launch_configuration.workers.*.id, count.index)
  vpc_zone_identifier  = [split(",", coalesce(lookup(var.worker_groups[count.index], "subnets", ""), join(",", var.subnets)))]
  count                = var.worker_group_count

  tags = [concat(
    list(
      map("key", "Name", "value", aws_eks_cluster.this.name}-${lookup(var.worker_groups[count.index], "name", count.index)}-eks_asg", "propagate_at_launch", true),
      map("key", "kubernetes.io/cluster/${aws_eks_cluster.this.name, "value", "owned", "propagate_at_launch", true),
      map("key", "EksCluster", "value", "true", "propagate_at_launch", true),
    ),
    local.asg_tags)
  ]

  lifecycle {
    ignore_changes = ["desired_capacity"]
  }
}

resource "aws_launch_configuration" "workers" {
  name_prefix                 = aws_eks_cluster.this.name}-${lookup(var.worker_groups[count.index], "name", count.index)
  associate_public_ip_address = lookup(var.worker_groups[count.index], "public_ip", lookup(var.workers_group_defaults, "public_ip"))
  security_groups             = [local.worker_security_group_id]
  iam_instance_profile        = aws_iam_instance_profile.workers.id
  image_id                    = lookup(var.worker_groups[count.index], "ami_id", data.aws_ami.eks_worker.id)
  instance_type               = lookup(var.worker_groups[count.index], "instance_type", lookup(var.workers_group_defaults, "instance_type"))
  key_name                    = lookup(var.worker_groups[count.index], "key_name", lookup(var.workers_group_defaults, "key_name"))
  user_data_base64            = base64encode(element(data.template_file.userdata.*.rendered, count.index))
  ebs_optimized               = lookup(var.worker_groups[count.index], "ebs_optimized", lookup(local.ebs_optimized, lookup(var.worker_groups[count.index], "instance_type", lookup(var.workers_group_defaults, "instance_type")), false))
  count                       = var.worker_group_count

  lifecycle {
    create_before_destroy = true
  }

  root_block_device {
    volume_size           = lookup(var.worker_groups[count.index], "root_volume_size", lookup(var.workers_group_defaults, "root_volume_size"))
    volume_type           = lookup(var.worker_groups[count.index], "root_volume_type", lookup(var.workers_group_defaults, "root_volume_type"))
    iops                  = lookup(var.worker_groups[count.index], "root_iops", lookup(var.workers_group_defaults, "root_iops"))
    delete_on_termination = true
  }
}

resource "aws_security_group" "workers" {
  name_prefix = aws_eks_cluster.this.name
  description = "Security group for all nodes in the cluster."
  vpc_id      = var.vpc_id
  count       = var.worker_security_group_id == "" ? 1 : 0
  tags        = merge(var.tags, map("Name", aws_eks_cluster.this.name}-eks_worker_sg", "kubernetes.io/cluster/${aws_eks_cluster.this.name, "owned"
  ))
}

resource "aws_security_group_rule" "workers_egress_internet" {
  description       = "Allow nodes all egress to the Internet."
  protocol          = "-1"
  security_group_id = aws_security_group.workers[count.index].id
  cidr_blocks       = ["0.0.0.0/0"]
  from_port         = 0
  to_port           = 0
  type              = "egress"
  count             = var.worker_security_group_id == "" ? 1 : 0
}

resource "aws_security_group_rule" "workers_ingress_self" {
  description              = "Allow node to communicate with each other."
  protocol                 = "-1"
  security_group_id        = aws_security_group.workers[count.index].id
  source_security_group_id = aws_security_group.workers[count.index].id
  from_port                = 0
  to_port                  = 65535
  type                     = "ingress"
  count                    = var.worker_security_group_id == "" ? 1 : 
}

resource "aws_security_group_rule" "workers_ingress_cluster" {
  description              = "Allow workers Kubelets and pods to receive communication from the cluster control plane."
  protocol                 = "tcp"
  security_group_id        = aws_security_group.workers[count.index].id
  source_security_group_id = local.cluster_security_group_id
  from_port                = var.worker_sg_ingress_from_port
  to_port                  = 65535
  type                     = "ingress"
  count                    = var.worker_security_group_id == "" ? 1 : 0
}

resource "aws_security_group_rule" "allow_cidr_ingress" {
  cidr_blocks       = [var.allow_cidr_blocks]
  description       = "Allow ssh communication with the EKS workers."
  protocol          = "tcp"
  security_group_id = aws_security_group.workers[count.index].id
  from_port         = 22
  to_port           = 22
  type              = "ingress"
  count             = var.cluster_security_group_id == "" ? 1 : 0
}

resource "aws_security_group_rule" "allow_mgmt_ingress" {
  description              = "Allow ssh communication with the EKS workers."
  protocol                 = "tcp"
  security_group_id        = aws_security_group.workers[count.index].id
  source_security_group_id = var.ssh_sg
  from_port                = 22
  to_port                  = 22
  type                     = "ingress"
  count                    = var.cluster_security_group_id == "" ? 1 : 0
}

resource "aws_iam_role" "workers" {
  name_prefix        = aws_eks_cluster.this.name
  assume_role_policy = data.aws_iam_policy_document.workers_assume_role_policy.json
}

resource "aws_iam_instance_profile" "workers" {
  name_prefix = aws_eks_cluster.this.name
  role        = aws_iam_role.workers.name
}

resource "aws_iam_role_policy_attachment" "workers_AmazonEKSWorkerNodePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = aws_iam_role.workers.name
}

resource "aws_iam_role_policy_attachment" "workers_AmazonEKS_CNI_Policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = aws_iam_role.workers.name
}

resource "aws_iam_role_policy_attachment" "workers_AmazonEC2ContainerRegistryReadOnly" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = aws_iam_role.workers.name
}

resource "aws_iam_role_policy" "workers_additional_policies" {
  role       = aws_iam_role.workers.name
  name       = var.environment}-Additional-Policies"
    policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": [
        "route53:ListHostedZones*",
        "route53:ListResourceRecordSets*",
        "route53:ChangeResourceRecordSets*"
      ],
      "Effect": "Allow",
      "Resource": "*"
    }
  ]
}
EOF
}

data "aws_iam_policy_document" "allow_roles" {
  statement {
    sid = "1"

    actions = [
      "sts:AssumeRole",
    ]

    resources = var.allow_roles
  }
}

resource "aws_iam_role_policy_attachment" "allow_roles" {
  policy_arn = aws_iam_policy.allow_roles.arn
  role       = aws_iam_role.workers.name
}

resource "aws_iam_policy" "allow_roles" {
  name_prefix = var.environment}-allow-roles"
  path        = "/"
  policy      = data.aws_iam_policy_document.allow_roles.json
}

resource "null_resource" "tags_as_list_of_maps" {
  count = length(keys(var.tags))

  triggers = map(
    "key", element(keys(var.tags), count.index),
    "value", element(values(var.tags), count.index),
    "propagate_at_launch", "true"
  )
}
